# tinyCAD

./: .gitignore  CMakeLists.txt  README.md
3rd/glad/: CMakeLists.txt  glad.c
3rd/imgui/: CMakeLists.txt
3rd/imgui/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj
dashedLine/: CMakeLists.txt  dashedLine.cpp  lineWidth.cpp  texture2d.cpp
include/: Camera.h  DataDefine.h  Event.h  ImgItem.h  ImgItemRender.h  Item.h  KeyEvent.h  LineItem.h  LineItemRender.h  MouseEvent.h  PointItem.h  PointItemRender.h  RectSelItem.h  RectSelItemRender.h  RectangeItem.h  Render.h  RulerItem.h  RulerItemRender.h  TreeIndex.h  Window.h  WindowEvent.h  event.h  log.h  mouseEvent.h  window.h
shader/: image.fs  image.vs  line.fs  line.vs  point.fs  point.vs  ruler.fs  selRectange.vs  shader.h  solids.fs
src/: Camera.cpp  ImgItem.cpp  ImgItemRender.cpp  KeyEvent.cpp  LineItem.cpp  LineItemRender.cpp  MouseEvent.cpp  PointItem.cpp  PointItemRender.cpp  RectSelItem.cpp  RectSelItemRender.cpp  RectangeItem.cpp  Render.cpp  RulerItem.cpp  RulerItemRender.cpp  TreeIndex.cpp  Window.cpp  WindowEvent.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp  mouseEvent.cpp  window.cpp
